--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@react-navigation/native": "6.1.9",
     "@react-navigation/native-stack": "6.9.17",
     "@react-navigation/stack": "6.0.11",
+    "@shopify/react-native-skia": "1.3.7",
     "@tradle/react-native-http": "2.0.1",
     "@walletconnect/jsonrpc-types": "1.0.2",
     "@walletconnect/legacy-utils": "2.0.0-rc.0",
@@ -116,6 +117,7 @@
     "react-native-fs": "2.20.0",
     "react-native-gesture-handler": "2.9.0",
     "react-native-get-random-values": "1.8.0",
+    "react-native-graph": "git+https://github.com/msalcala11/react-native-graph#5f744a907ca66b004bc14f191e1ed0784f53122d",
     "react-native-haptic-feedback": "1.14.0",
     "react-native-in-app-review": "4.3.1",
     "react-native-inappbrowser-reborn": "3.7.0",
@@ -138,7 +140,7 @@
     "react-native-quick-actions": "0.3.13",
     "react-native-randombytes": "3.6.1",
     "react-native-rate": "1.2.12",
-    "react-native-reanimated": "3.0.2",
+    "react-native-reanimated": "3.14.0",
     "react-native-reanimated-carousel": "3.5.1",
     "react-native-render-html": "6.3.4",
     "react-native-restart": "0.0.27",
