--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@ethersproject/shims": "5.7.0",
     "@freakycoder/react-native-bounceable": "0.2.5",
+    "@gorhom/bottom-sheet": "5.0.0-alpha.11",
     "@hookform/resolvers": "2.8.3",
     "@json-rpc-tools/utils": "1.7.6",
     "@ledgerhq/coin-framework": "0.5.1",
