--- a/ios/Podfile
+++ b/ios/Podfile
@@ -46,6 +46,10 @@ $VCEnableLocation=false
 
 target 'BitPayApp' do
   pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text', :modular_headers => true
+  
+  # Add explicit Braze dependencies
+  pod 'BrazeKit'
+  pod 'BrazeUI'
 
   config = use_native_modules!
 
@@ -61,6 +65,33 @@ target 'BitPayApp' do
   end
 
   post_install do |installer|
+    # Enable C++ modules for all targets
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        # Enable modules
+        config.build_settings['CLANG_ENABLE_MODULES'] = 'YES'
+        config.build_settings['DEFINES_MODULE'] = 'YES'
+        
+        # Enable Objective-C modules
+        config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+        
+        # Enable C++ modules
+        config.build_settings['CLANG_CXX_LANGUAGE_STANDARD'] = 'c++17'
+        config.build_settings['CLANG_ENABLE_CPP_MODULES'] = 'YES'
+        
+        # Other existing settings
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+        config.build_settings['ENABLE_BITCODE'] = 'NO'
+        
+        # Fix for Xcode 15 warnings
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
+        
+        # Enable C++ modules specifically
+        config.build_settings['CLANG_ENABLE_MODULE_DEBUGGING'] = 'YES'
+        config.build_settings['SWIFT_ENABLE_MODULES'] = 'YES'
+      end
+    end
+    
     # Workaround for Xcode 16 and iOS 18
     bitcode_strip_path = `xcrun --find bitcode_strip`.chop!
     def strip_bitcode_from_framework(bitcode_strip_path, framework_relative_path)
