--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,9 +51,9 @@ $VCEnableLocation=false
 target 'BitPayApp' do
   pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text', :modular_headers => true
   
-  # Add explicit Braze dependencies
-  pod 'BrazeKit'
-  pod 'BrazeUI'
+  # # Add explicit Braze dependencies
+  # pod 'BrazeKit'
+  # pod 'BrazeUI'
 
   config = use_native_modules!
 
@@ -95,6 +95,29 @@ target 'BitPayApp' do
         config.build_settings['OTHER_CPLUSPLUSFLAGS'] = '-DFOLLY_NO_CONFIG -DFOLLY_MOBILE=1 -DFOLLY_USE_LIBCPP=1 -DFOLLY_HAVE_COROUTINES=1 -DRCT_NEW_ARCH_ENABLED=1'
         config.build_settings['OTHER_CFLAGS'] = '-DFOLLY_NO_CONFIG -DFOLLY_MOBILE=1 -DFOLLY_USE_LIBCPP=1 -DFOLLY_HAVE_COROUTINES=1'
         config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'RCT_NEW_ARCH_ENABLED=1'
+      end
+    end
+
+    # Modify RCT-Folly Portability.h to disable coroutines
+    Dir.glob(installer.sandbox.root + "RCT-Folly/folly/Portability.h") do |file|
+      begin
+        # First try to make the file writable
+        system "chmod +w #{file}"
+        
+        contents = File.read(file)
+        modified_contents = contents.gsub(/#define FOLLY_HAS_COROUTINES 1/, '#define FOLLY_HAS_COROUTINES 0')
+        
+        # Try writing with elevated privileges if needed
+        if !File.writable?(file)
+          system "sudo chmod +w #{file}"
+        end
+        
+        File.write(file, modified_contents)
+        
+        # Optionally restore original permissions
+        system "chmod -w #{file}"
+      rescue => e
+        Pod::UI.warn "Failed to modify Portability.h: #{e.message}"
       end
     end
   end
