--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@react-navigation/native-stack": "6.9.17",
     "@react-navigation/stack": "6.0.11",
     "@reown/walletkit": "1.1.1",
-    "@shopify/flash-list": "1.7.0",
+    "@shopify/flash-list": "1.7.2",
     "@shopify/react-native-skia": "1.3.7",
     "@tradle/react-native-http": "2.0.1",
     "@walletconnect/jsonrpc-types": "1.0.2",
@@ -100,13 +100,13 @@
     "moralis": "2.25.2",
     "papaparse": "5.3.2",
     "path-browserify": "1.0.1",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-hook-form": "7.19.5",
     "react-i18next": "12.2.0",
-    "react-native": "0.72.17",
+    "react-native": "0.75.4",
     "react-native-appsflyer": "6.5.20",
     "react-native-biometrics": "3.0.1",
-    "react-native-ble-plx": "2.0.3",
+    "react-native-ble-plx": "3.1.2",
     "react-native-bootsplash": "3.2.6",
     "react-native-config": "1.5.0",
     "react-native-crypto": "2.1.0",
@@ -116,7 +116,7 @@
     "react-native-exception-handler": "2.10.10",
     "react-native-fast-image": "8.6.3",
     "react-native-fs": "2.20.0",
-    "react-native-gesture-handler": "2.9.0",
+    "react-native-gesture-handler": "2.21.2",
     "react-native-get-random-values": "1.11.0",
     "react-native-graph": "git+https://github.com/msalcala11/react-native-graph#5f744a907ca66b004bc14f191e1ed0784f53122d",
     "react-native-haptic-feedback": "1.14.0",
@@ -132,7 +132,7 @@
     "react-native-mmkv": "2.10.1",
     "react-native-modal": "13.0.1",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.1.4",
+    "react-native-pager-view": "6.5.1",
     "react-native-permissions": "5.1.0",
     "react-native-print": "0.11.0",
     "react-native-progress": "5.0.0",
@@ -141,17 +141,17 @@
     "react-native-quick-actions": "0.3.13",
     "react-native-randombytes": "3.6.1",
     "react-native-rate": "1.2.12",
-    "react-native-reanimated": "3.14.0",
+    "react-native-reanimated": "3.16.2",
     "react-native-reanimated-carousel": "3.5.1",
     "react-native-render-html": "6.3.4",
     "react-native-restart": "0.0.27",
     "react-native-rounded-checkbox": "0.3.3",
-    "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "3.27.0",
-    "react-native-share": "9.4.1",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "3.33.0",
+    "react-native-share": "11.1.0",
     "react-native-shared-element": "0.8.8",
     "react-native-skeleton-placeholder": "5.2.4",
-    "react-native-svg": "13.8.0",
+    "react-native-svg": "15.9.0",
     "react-native-svg-transformer": "0.14.3",
     "react-native-tab-view": "3.1.1",
     "react-native-text-input-mask": "3.1.4",
@@ -192,8 +192,10 @@
     "@babel/runtime": "7.21.0",
     "@babel/traverse": "7.25.9",
     "@jest/create-cache-key-function": "26.5.0",
-    "@react-native/eslint-config": "0.72.2",
-    "@react-native/metro-config": "0.72.12",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/eslint-config": "0.75.4",
+    "@react-native/metro-config": "0.75.4",
+    "@react-native/typescript-config": "0.75.4",
     "@storybook/addon-actions": "5.3.21",
     "@storybook/addon-knobs": "5.3.21",
     "@storybook/addon-links": "5.3.21",
@@ -213,37 +215,37 @@
     "@types/lodash.throttle": "4.1.6",
     "@types/lodash.uniqby": "4.7.6",
     "@types/papaparse": "5.3.7",
-    "@types/react": "18.0.28",
+    "@types/react": "18.2.6",
     "@types/react-native": "0.71.3",
     "@types/react-native-dotenv": "0.2.0",
     "@types/react-redux": "7.1.25",
-    "@types/react-test-renderer": "18.0.0",
+    "@types/react-test-renderer": "18.3.0",
     "@types/redux-logger": "3.0.9",
     "@types/styled-components": "5.1.25",
     "@types/styled-components-react-native": "5.2.1",
-    "babel-jest": "29.2.1",
+    "babel-jest": "29.6.3",
     "babel-loader": "9.1.2",
     "babel-plugin-transform-remove-console": "6.9.4",
     "dotenv": "16.0.1",
     "eslint": "8.19.0",
     "i18next-parser": "5.4.0",
-    "jest": "29.2.1",
+    "jest": "29.6.3",
     "jest-cli": "^28.1.1",
     "jest-styled-components": "^7.0.8",
     "jest-svg-transformer": "^1.0.0",
     "jest-transform-stub": "^2.0.0",
-    "metro-react-native-babel-preset": "0.76.9",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "patch-package": "6.4.7",
-    "prettier": "2.8.4",
+    "prettier": "2.8.8",
     "react-dom": "17.0.1",
     "react-native-clean-project": "3.6.7",
     "react-native-codegen": "0.0.7",
     "react-native-dotenv": "3.3.0",
     "react-native-version": "4.0.0",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "redux-devtools-extension": "2.13.9",
     "ts-jest": "29.1.1",
-    "typescript": "4.8.4"
+    "typescript": "5.0.4"
   },
   "resolutions": {
     "@types/react": "^18",
