--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,11 @@ setup_permissions([
 'Notifications',
 ])
 
+# linkage = ENV['USE_FRAMEWORKS']
+# if linkage != nil
+#   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
+#   use_frameworks! :linkage => linkage.to_sym
+# end
 use_frameworks! :linkage => :static
 
 # Disable Location APIs so we compile out any privacy sensitive APIs
