--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "translation:download": "crowdin download --identity crowdin-credentials.yml"
   },
   "dependencies": {
-    "@braze/react-native-sdk": "12.2.0",
+    "@braze/react-native-sdk": "13.1.1",
     "@ethersproject/shims": "5.7.0",
     "@freakycoder/react-native-bounceable": "0.2.5",
     "@gorhom/bottom-sheet": "5.0.5",
@@ -103,7 +103,7 @@
     "react": "18.3.1",
     "react-hook-form": "7.19.5",
     "react-i18next": "12.2.0",
-    "react-native": "0.75.4",
+    "react-native": "0.76.2",
     "react-native-appsflyer": "6.5.20",
     "react-native-biometrics": "3.0.1",
     "react-native-ble-plx": "3.1.2",
@@ -149,7 +149,6 @@
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "3.35.0",
     "react-native-share": "11.1.0",
-    "react-native-shared-element": "0.8.8",
     "react-native-skeleton-placeholder": "5.2.4",
     "react-native-svg": "15.9.0",
     "react-native-svg-transformer": "0.14.3",
@@ -181,21 +180,25 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "7.21.0",
+    "@babel/core": "7.25.2",
     "@babel/plugin-proposal-export-namespace-from": "7.16.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.16.7",
     "@babel/plugin-proposal-optional-chaining": "7.16.7",
     "@babel/plugin-transform-arrow-functions": "7.16.7",
     "@babel/plugin-transform-shorthand-properties": "7.16.7",
     "@babel/plugin-transform-template-literals": "7.16.7",
+    "@babel/preset-env": "7.25.3",
     "@babel/preset-typescript": "7.16.7",
-    "@babel/runtime": "7.21.0",
+    "@babel/runtime": "7.25.0",
     "@babel/traverse": "7.25.9",
     "@jest/create-cache-key-function": "26.5.0",
-    "@react-native/babel-preset": "0.75.4",
-    "@react-native/eslint-config": "0.75.4",
-    "@react-native/metro-config": "0.75.4",
-    "@react-native/typescript-config": "0.75.4",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.76.2",
+    "@react-native/eslint-config": "0.76.2",
+    "@react-native/metro-config": "0.76.2",
+    "@react-native/typescript-config": "0.76.2",
     "@storybook/addon-actions": "5.3.21",
     "@storybook/addon-knobs": "5.3.21",
     "@storybook/addon-links": "5.3.21",
@@ -239,7 +242,7 @@
     "prettier": "2.8.8",
     "react-dom": "17.0.1",
     "react-native-clean-project": "3.6.7",
-    "react-native-codegen": "0.0.7",
+    "react-native-codegen": "0.71.5",
     "react-native-dotenv": "3.3.0",
     "react-native-version": "4.0.0",
     "react-test-renderer": "18.3.1",
