fix stuck at evaluating settings

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -185,5 +185,5 @@ dependencies {
     implementation project(':react-native-appsflyer')
 }
 
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+// apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply plugin: 'com.google.android.gms.strict-version-matcher-plugin'
