--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "14.27.0",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "react-native run-android --verbose",
     "android:release": "react-native run-android --variant release",
     "ios": "react-native run-ios",
     "ios:device": "export NODE_OPTIONS=--openssl-legacy-provider && react-native run-ios --device",
@@ -67,7 +67,7 @@
     "@react-navigation/stack": "6.0.11",
     "@reown/walletkit": "1.1.1",
     "@shopify/flash-list": "1.7.2",
-    "@shopify/react-native-skia": "1.3.7",
+    "@shopify/react-native-skia": "1.6.0",
     "@tradle/react-native-http": "2.0.1",
     "@walletconnect/jsonrpc-types": "1.0.2",
     "@walletconnect/react-native-compat": "2.14.0",
@@ -132,7 +132,7 @@
     "react-native-mmkv": "2.10.1",
     "react-native-modal": "13.0.1",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.1.4",
+    "react-native-pager-view": "6.6.0",
     "react-native-permissions": "5.1.0",
     "react-native-print": "0.11.0",
     "react-native-progress": "5.0.0",
@@ -159,7 +159,7 @@
     "react-native-url-polyfill": "1.3.0",
     "react-native-user-agent": "2.3.1",
     "react-native-uuid": "2.0.1",
-    "react-native-vision-camera": "4.0.1",
+    "react-native-vision-camera": "4.6.3",
     "react-native-webview": "11.26.1",
     "react-navigation-backhandler": "2.0.1",
     "react-navigation-shared-element": "3.1.3",
