--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
     "postinstall": "./scripts/postinstall.sh",
     "clean": "react-native-clean-project",
-    "pod:install": "command -v pod && (cd ios/ && pod install && cd ..) || echo \"pod command not found\"",
+    "pod:install": "command -v pod && (cd ios/ && RCT_NEW_ARCH_ENABLED=0 bundle exec pod install && cd ..) || echo \"pod command not found\"",
     "splash": "react-native generate-bootsplash assets/img/logos/bitpay.png --background-color=\"#1A3B8B\" --logo-width 130",
     "postversion": "react-native-version",
     "set:dev": "export NODE_ENV=development && yarn set-all && node ./scripts/dev-overrides.js",
