--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,7 @@ $VCEnableLocation=false
 
 target 'BitPayApp' do
   pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text', :modular_headers => true
+  pod 'BrazeUI', :podspec => 'https://raw.githubusercontent.com/braze-inc/braze-swift-sdk-prebuilt-static/11.1.1/BrazeUI.podspec'
 
   config = use_native_modules!
 
